# Tyrone3

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  conftest.py  consolidated.txt  docker-compose.yml  gobook_rpa.py  main.py  models.py  ollama_client.py  portfolio_sprints.md  pyproject.toml  rag.db  requirements.txt  secrets.example.json  test_ingest.db  watcher.py
app/: config.py
demo/: seed.py  walkthrough.md
docs/: architecture_diagram.md  scorecard_output.txt  scorecard_showcase.md  why_local.md
eval/: build_corpus.py  build_index.py  common.py  confidence_eval.py  faithfulness_eval.py  golden.jsonl  grader_prompt.txt  intent_eval.py  intents.jsonl  perf_eval.py  refusal_eval.py  retrieval_eval.py  scorecard.py
rag/: db.py  docx_extractor.py  embedder.py  ingest.py  layout_normalizer.py  manual_test_rag.py  markitdown_extractor.py  ocr_service.py  personal_db.py  search.py  spreadsheet_extractor.py  timing.py
rag_uploads/: 7d3620027d884f878ebd4e0a2010b138_db916bcd603f4c18b5ae3a76f9e0c802_Full_Synthetic_SOP.txt  826988ecd44448da9ea3f4196402a6ce_feeae881202c460a8ea835190e196ac1_MSA Deductions Summary_ Q1 2026.xlsx  905f9c1d01cd4fd39ec16e61895fe288_0614de58d0de4bada4af7023204240ec_MSA Deductions Summary_ Q1 2026.xlsx  a00ea27469ca453dbf30f98131eeab36_04cf53197b8548d3bbc0708a3fd3c232_Network and System Access SOP June 2025 v9.2_Cleaned.docx  b76a11ca013e4c2ba8be3e0dfe078b4f_43435ef7a7db46939ffb5c87ffa23a3e_Digital Governance Strategy for Cape Town (1).docx  (+1 more)
scripts/: check_deps_sync.py  consolidate_python_sources.py
(+74 files in other folders)
